--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,20 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.vosxvo.fooddelivery">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
-        android:allowBackup="true"
+        android:name=".App"
+        android:usesCleartextTraffic="true"
         android:icon="@mipmap/new_ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/new_ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FoodDelivery">
+        android:theme="@style/Theme.FoodDelivery.Custom"
+        tools:targetApi="m"
+        android:allowBackup="false">
         <activity android:name=".ui.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.OrderDetailActivity" android:parentActivityName=".ui.MainActivity"/>
+        <activity android:name=".ui.HistoryActivity" android:parentActivityName=".ui.MainActivity"/>
+        <activity android:name=".ui.ChatActivity" android:parentActivityName=".ui.MainActivity"/>
+        <activity android:name=".ui.FoodActivity" android:parentActivityName=".ui.MainActivity"/>
         <activity android:name=".ui.MainActivity" />
         <activity android:name=".ui.StarterActivity" />
     </application>
