--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,9 +41,12 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation platform('com.google.firebase:firebase-bom:28.3.0')
+    implementation platform('com.google.firebase:firebase-bom:28.3.1')
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-database'
+
+
     implementation 'com.google.android.material:material:1.5.0-alpha01'
     
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -52,5 +55,16 @@ dependencies {
 
     implementation 'com.google.dagger:hilt-android:2.38.1'
     annotationProcessor 'com.google.dagger:hilt-compiler:2.38.1'
+
+    // For instrumentation tests
+    androidTestImplementation  'com.google.dagger:hilt-android-testing:2.38.1'
+    androidTestAnnotationProcessor 'com.google.dagger:hilt-compiler:2.38.1'
+
+    // For local unit tests
+    testImplementation 'com.google.dagger:hilt-android-testing:2.38.1'
+    testAnnotationProcessor 'com.google.dagger:hilt-compiler:2.38.1'
+
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
 }
