--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,9 +20,15 @@ android {
     }
 
     buildTypes {
+        debug {
+            buildConfigField "String", "MAIN_API_BASE_URL", MAIN_API_BASE_URL
+            buildConfigField "String", "ADMIN_UID", ADMIN_UID
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField "String", "MAIN_API_BASE_URL", MAIN_API_BASE_URL
+            buildConfigField "String", "ADMIN_UID", ADMIN_UID
         }
     }
     compileOptions {
